styles.css
@font-face {
    font-family: 'KomikaTitle-PaintRegular';
    src: url('fonts/komikatitle-paint-webfont.eot');
    src: url('fonts/komikatitle-paint-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/komikatitle-paint-webfont.woff') format('woff'),
         url('fonts/komikatitle-paint-webfont.ttf') format('truetype'),
         url('fonts/komikatitle-paint-webfont.svg#KomikaTitle-PaintRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'OpenSansSemibold';
    src: url('fonts/OpenSans-Semibold-webfont.eot');
    src: url('fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/OpenSans-Semibold-webfont.woff') format('woff'),
         url('fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
         url('fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'DigitaldreamFatRegular';
    src: url('fonts/digitaldreamfat-webfont.eot');
    src: url('fonts/digitaldreamfat-webfont.eot?#iefix') format('embedded-opentype'),
         url('fonts/digitaldreamfat-webfont.woff') format('woff'),
         url('fonts/digitaldreamfat-webfont.ttf') format('truetype'),
         url('fonts/digitaldreamfat-webfont.svg#DigitaldreamFatRegular') format('svg');
    font-weight: normal;
    font-style: normal;
}

header, section, nav, footer {
    display: block;
}

html, body, ul, ol, hr, h1, h2, h3, p, form, fieldset {
    margin: 0;
    padding: 0;
    font-weight: normal;
}

body, a, button {
    color: #fff;
}

h1, h2,
input, select, .select, button,
#obstacles,
.description,
#call-to-action
{
    text-transform: uppercase;
    font-family: 'KomikaTitle-PaintRegular', sans-serif;
}

#logo {
    margin-bottom: 17px;
}

h1 {
    color: #fe6537;
    text-shadow: 0.0384615384615385em 0.0576923076923077em 0 #fff;
    letter-spacing: 0.0307692307692308em;
    font-size: 3.25em;
    padding-bottom: 0.0961538461538462em;
}

section {
    overflow: hidden;
}

h2, #obstacles h3 {
    font-size: 2.5em;
}

h2,
#obstacles h3,
h4,
button,
#call-to-action {
    text-shadow: 0.125em 0.125em 0 rgba(0,0,0,.2);
}

h2:after {
    background: transparent url('images/rally.gif') repeat-x 0 50%;
    display: block;
    margin-top: -50px;
    height: 40px;
    content: "";
}

h3 {
    font-size: 1.25em;
}

ul, ol {
    list-style: none;
}

img {
    border: 0;
    -ms-interpolation-mode: bicubic;
    max-width: 100%;
}

hr {
    background: #17343d;
    height: 0.4375em;
    border: 0;
    opacity: .1;
}

html {
    background: #80c1d6 url('images/texture-blue.jpg');
}

body {
    background: url('images/splash.png') no-repeat 50% 0;
    font: normal 100% 'OpenSansSemibold', Verdana, sans-serif;
}

nav {
    background: rgba(15,40,48,.05);
    text-align: center;
    position: fixed;
    width: 100%;
    z-index: 100;
}

nav li, nav a {
    display: inline-block;
}

nav a {
    text-decoration: none;
    text-transform: uppercase;
    line-height: 2em;
    padding: 0 1.625em;
}

nav a:hover {
    background-color: rgba(0,0,0,.1);
}

.content {
    width: 68.01736613603473%;
    padding: 0 0.625em;
    margin: 0 auto;
}

.column {
    width: 50%;
    text-align: center;
    float: left;
}

header {
    text-align: center;
    padding: 4.5em 0;
}

header .airing {
    font-size: 1.375em;
}

#obstacles,
input, select, .select {
    background: #fe6638 url('images/texture-orange.jpg');
}

#obstacles {
    padding-bottom: 69px;
}

#obstacles h2 {
    padding: 50px 0 59px;
}

#obstacles h2:after {
    margin-left: 280px;
}

#obstacles li {
    background: #80b238 url('images/texture-green.jpg');
    -moz-border-radius: 6px;
    border-radius: 6px;
    display: inline-block;
    position: relative;
    height: 46.80851063829787%;
    width: 46.80851063829787%;
    margin: 0 3.191489361702128% 3.191489361702128% 0;
    vertical-align: top;
    text-align: center;
}

#obstacles a {
    font-size: 0.875em;
    text-decoration: none;
    display: inline-block;
    padding: 0 10.22727272727273%;
    width: 79.54545454545455%;
    vertical-align: bottom;
    color: #fff;
}

#obstacles a span {
    display: block;
    margin: 0 -10.22727272727273%;
}

#obstacles a .description {
    display: none;
}

#obstacles .selected {
    background: #eef13f url('images/texture-yellow.jpg');
}

#obstacles .selected a {
    color: #f46034;
}

#obstacles div.column {
    background: transparent url('images/obstacles-splash.jpg') no-repeat 50% 0;
}

#obstacles h3,
#obstacles h4,
button span {
    line-height: 1em;
    margin: 0;
    padding: 0;
    /* 7.5 deg */
    -webkit-transform: rotate(-7.5deg);
    -moz-transform: rotate(-7.5deg);
    -ms-transform: rotate(-7.5deg);
    -o-transform: rotate(-7.5deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=-7); /* TODO: check if this works */
}

#obstacles h3 {
    font-size: 40px;
    padding-top: 14.8936170212766%;
}

#obstacles h4 {
    padding: 14px 0 100px;
    font-size: 21.18px;
}

#obstacles img {
    position: relative;
}

#pick_it:before {
    content: "";
    position: absolute;
    left: 46.15%;
    top: 57%;
    background: transparent url('images/obstacles/snuff.png') no-repeat 0 0;
    width: 13px;
    height: 23px;
    display: block;
    /* only ff does pseudo transitions, but there is hope */
    -moz-transition: all 1s ease-out;
    -webkit-transition: all 1s ease-out;
}

#pick_it:hover:before{
    -moz-transform: translate(0,20px);
    -webkit-transform: translate(0,20px);
}

#prizes {
    background: #80b238 url('images/texture-green.jpg');
    padding-bottom: 120px;
}

#prizes h2 {
    padding: 70px 0 86px;
}

#prizes h2:after {
    margin-left: 180px;
}

#prizes li {
    margin: 0;
    display: inline-block;
    vertical-align: top;
    text-align: center;
    width: 44.68085106382979%;
    padding: 0 2.659574468085106%;
}

#prizes .last-row {
    vertical-align: bottom;
    margin-top: -95px;
}

#be-a-contestant {
    padding-bottom: 140px;
}

#be-a-contestant h2 {
    padding: 72px 0 76px;
}

#be-a-contestant h2:after {
    margin-left: 420px;
    background-position: 20px 50%;
}

#be-a-contestant div.column {
    text-align: center;
}

fieldset {
    text-align: left;
    border: 0;
}

label {
    display: none;
}

input, select, .select {
    -moz-border-radius: 4px;
    border-radius: 4px;
    border: 0;
    height: 3.1875em;
    font-size: 1em;
    padding-left: 0.8125em;
    color: #fff;
    margin-bottom: 0.9375em;
}

.select {
    position: relative;
    float: left;
    line-height: 50px;
}

.select select {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
}

.select .arrow {
    background: transparent url('images/arrow.png') no-repeat 0 0;
    width: 50px;
    height: 50px;
    position: absolute;
    right: 0;
    top: 0;
}

input {
    width: 23.75em;
    display: block;
}

::-webkit-input-placeholder {
    color: #fff;
}

:-moz-placeholder {
    color: #fff;
}

#team-color {
    width: 220px;
    margin-right: 18px;
}

#gender {
    width: 140px;
}

button {
    outline: none;
    margin: 24px 0 0 62px;
    letter-spacing: 1px;
    border: 0;
    background: transparent url('images/button-splash.jpg') no-repeat 50% 50%;
    width: 240px;
    height: 155px;
    font-size: 26px;
}

#clock {
    background: transparent url('images/clock.jpg') no-repeat 50% 50%;
    width: 390px;
    text-indent: 10px;
    height: 330px;
    color: #f5eb00;
    overflow: hidden;
    display: inline-block;
    font-size: 140px;
    line-height: 330px;
    font-family: 'DigitaldreamFatRegular', Courier, monospace;
    text-shadow: 6px 10px 0 #000;
    margin-bottom: 40px;
}

#clock .remaining {
    text-indent: -999em;
    display: block;
}

#call-to-action {
    width: 260px;
    font-size: 40px;
    line-height: 50.6px;
    display: inline-block;
    letter-spacing: 1.6px;
}

footer {
    text-align: center;
}

footer #kn-logo {
    margin: -45px 0 14px;
    z-index: 2;
    position: relative;
}

footer p, footer .adr {
    font-size: 0.875em;
}

footer .left-column, footer .right-column {
    display: inline-block;
    width: 21.5em;
    line-height: 18px;
}

h3 {
    margin-bottom: 7px;
}

.left-column {
    text-align: right;
    padding-right: 10px;
}

.right-column {
    text-align: left;
    padding-left: 0.7857142857142857em;
    padding-bottom: 27px;
}

footer {
    padding-bottom: 1.5em; /* 24 */
}

footer a {
    text-decoration: none;
}

#license {
    margin: 0 0 19px;
}

#license + p {
    padding-bottom: 20px;
}

footer a:hover {
    text-decoration: underline;
}

@media only screen and (min-width: 480px) {
}

@media only screen and (min-width: 768px) {
}

@media only screen and (min-width: 1400px) {
    .content {
        max-width: 78.75em; /* 1260 */
    }

    #obstacles ul {
        width: 63.49206349206349%;
    }

    #obstacles li {
        width: 31%;
        height: 31%;
        margin: 0 2.3333% 2.3333% 0;
    }

    #obstacles h2:after {
        margin-right: 38.1%; /* roughly div.column width + li margin */
    }

    #obstacles div.column {
        width: 36.50793650793651%;
        margin-top: -9em;
    }

    #prizes ul {
        text-align: center;
        padding-bottom: 6%;
    }

    #prizes li {
        vertical-align: bottom;
        width: 29%;
        padding: 0 2%;
    }

    #prizes .half {
        vertical-align: top;
    }

    #prizes .half.last-row {
        margin-left: -33%;
        vertical-align: bottom;
        margin-bottom: -6%;
    }
}

